--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=home,info,list,logout,settings,social_leaderboard,star_half);
+
 @font-face {
   font-family: 'Play';
   src: url(../fonts/Play-Regular.ttf);
@@ -14,7 +16,14 @@
 
 @font-face {
   font-family: 'Exo 2';
-  src: url(../fonts/Exo2-Regular.ttf);
+  src: url(../fonts/Exo2-Regular.ttf) format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Exo 2';
+  src: url(../fonts/Exo2-Bold.ttf) format('opentype');
   font-weight: bold;
   font-style: normal;
 }
@@ -22,7 +31,7 @@
 html,
 body {
   font-family: 'Exo 2';
-  background: #0e1316;
+  background: var(--background);
 }
 
 * {
@@ -31,5 +40,110 @@ body {
   text-decoration: none;
   box-sizing: border-box;
   outline: none;
-  color: white;
+  color: var(--on-background);
+}
+
+[theme='dark'] {
+  --primary: rgb(177 209 138);
+  --surface-tint: rgb(177 209 138);
+  --on-primary: rgb(31 55 1);
+  --primary-container: rgb(53 78 22);
+  --on-primary-container: rgb(205 237 163);
+  --secondary: rgb(191 203 173);
+  --on-secondary: rgb(42 51 30);
+  --secondary-container: rgb(64 74 51);
+  --on-secondary-container: rgb(220 231 200);
+  --tertiary: rgb(160 208 203);
+  --on-tertiary: rgb(0 55 53);
+  --tertiary-container: rgb(31 78 75);
+  --on-tertiary-container: rgb(188 236 231);
+  --error: rgb(255 180 171);
+  --on-error: rgb(105 0 5);
+  --error-container: rgb(147 0 10);
+  --on-error-container: rgb(255 218 214);
+  --background: rgb(18 20 14);
+  --on-background: rgb(226 227 216);
+  --surface: rgb(18 20 14);
+  --on-surface: rgb(226 227 216);
+  --surface-variant: rgb(68 72 61);
+  --on-surface-variant: rgb(197 200 186);
+  --outline: rgb(143 146 133);
+  --outline-variant: rgb(68 72 61);
+  --shadow: rgb(0 0 0);
+  --scrim: rgb(0 0 0);
+  --inverse-surface: rgb(226 227 216);
+  --inverse-on-surface: rgb(47 49 42);
+  --inverse-primary: rgb(76 102 43);
+  --primary-fixed: rgb(205 237 163);
+  --on-primary-fixed: rgb(16 32 0);
+  --primary-fixed-dim: rgb(177 209 138);
+  --on-primary-fixed-variant: rgb(53 78 22);
+  --secondary-fixed: rgb(220 231 200);
+  --on-secondary-fixed: rgb(21 30 11);
+  --secondary-fixed-dim: rgb(191 203 173);
+  --on-secondary-fixed-variant: rgb(64 74 51);
+  --tertiary-fixed: rgb(188 236 231);
+  --on-tertiary-fixed: rgb(0 32 30);
+  --tertiary-fixed-dim: rgb(160 208 203);
+  --on-tertiary-fixed-variant: rgb(31 78 75);
+  --surface-dim: rgb(18 20 14);
+  --surface-bright: rgb(56 58 50);
+  --surface-container-lowest: rgb(12 15 9);
+  --surface-container-low: rgb(26 28 22);
+  --surface-container: rgb(30 32 26);
+  --surface-container-high: rgb(40 43 36);
+  --surface-container-highest: rgb(51 54 46);
+  --surface-container-highest: rgb(48 54 53);
+}
+
+[theme='light'] {
+  --primary: rgb(76 102 43);
+  --surface-tint: rgb(76 102 43);
+  --on-primary: rgb(255 255 255);
+  --primary-container: rgb(205 237 163);
+  --on-primary-container: rgb(16 32 0);
+  --secondary: rgb(88 98 73);
+  --on-secondary: rgb(255 255 255);
+  --secondary-container: rgb(220 231 200);
+  --on-secondary-container: rgb(21 30 11);
+  --tertiary: rgb(56 102 99);
+  --on-tertiary: rgb(255 255 255);
+  --tertiary-container: rgb(188 236 231);
+  --on-tertiary-container: rgb(0 32 30);
+  --error: rgb(186 26 26);
+  --on-error: rgb(255 255 255);
+  --error-container: rgb(255 218 214);
+  --on-error-container: rgb(65 0 2);
+  --background: rgb(249 250 239);
+  --on-background: rgb(26 28 22);
+  --surface: rgb(249 250 239);
+  --on-surface: rgb(26 28 22);
+  --surface-variant: rgb(225 228 213);
+  --on-surface-variant: rgb(68 72 61);
+  --outline: rgb(117 121 108);
+  --outline-variant: rgb(197 200 186);
+  --shadow: rgb(0 0 0);
+  --scrim: rgb(0 0 0);
+  --inverse-surface: rgb(47 49 42);
+  --inverse-on-surface: rgb(241 242 230);
+  --inverse-primary: rgb(177 209 138);
+  --primary-fixed: rgb(205 237 163);
+  --on-primary-fixed: rgb(16 32 0);
+  --primary-fixed-dim: rgb(177 209 138);
+  --on-primary-fixed-variant: rgb(53 78 22);
+  --secondary-fixed: rgb(220 231 200);
+  --on-secondary-fixed: rgb(21 30 11);
+  --secondary-fixed-dim: rgb(191 203 173);
+  --on-secondary-fixed-variant: rgb(64 74 51);
+  --tertiary-fixed: rgb(188 236 231);
+  --on-tertiary-fixed: rgb(0 32 30);
+  --tertiary-fixed-dim: rgb(160 208 203);
+  --on-tertiary-fixed-variant: rgb(31 78 75);
+  --surface-dim: rgb(218 219 208);
+  --surface-bright: rgb(249 250 239);
+  --surface-container-lowest: rgb(255 255 255);
+  --surface-container-low: rgb(243 244 233);
+  --surface-container: rgb(238 239 227);
+  --surface-container-high: rgb(232 233 222);
+  --surface-container-highest: rgb(226 227 216);
 }
