--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -52,6 +52,8 @@ body {
   --shadow: #d9d9d9;
   --inverse-shadow: #0f0f0f;
   --outline: #f1f1f1;
+  --error: #ff0000;
+  --modal-back:#ffffff;
 }
 
 [theme='light'] {
@@ -65,4 +67,6 @@ body {
   --shadow: #3d3d3d;
   --inverse-shadow: #d9d9d9;
   --outline: #0f0f0f;
+  --error: #ff0000;
+  --modal-back:#000000;
 }
