--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -49,6 +49,7 @@ body {
   --tertiary: #272727;
   --on-tertiary: #f1f1f1;
   --background: #0f0f0f;
+  --opacity-background: #0f0f0fed;
   --shadow: #d9d9d9;
   --inverse-shadow: #0f0f0f;
   --outline: #f1f1f1;
@@ -62,6 +63,7 @@ body {
   --tertiary: #cecece;
   --on-tertiary: #3d3d3d;
   --background: #f1f1f1;
+  --opacity-background: #0f0f0fd2;
   --shadow: #3d3d3d;
   --inverse-shadow: #d9d9d9;
   --outline: #0f0f0f;
